# hikari

./: .gitattributes  CHANGELOG.md  LICENSE  README.md  build.gradle.kts  gradle.properties  lancir_optimization_report.md  optimization_report.md  settings.gradle.kts
.agents/: AGENTS.md  project_analysis.md
.github/workflows/: build.yml  release.yml
app/: build.gradle.kts  google-services.json  proguard-rules.pro  stability_config.conf
app/src/main/cpp/: CMakeLists.txt  bbfjni.cpp  hikari-image-pipeline.cpp  vips_jni.cpp
app/src/main/cpp/bbf/: bbfcodec.cpp  bbfcodec.h  bbfjni.cpp  libbbf.h
app/src/main/res/values/: styles.xml  themes.xml
app/src/main/res/values-night-v31/: themes.xml
app/src/main/res/values-v31/: themes.xml
core-metadata/: build.gradle.kts
core/archive/: build.gradle.kts
core/common/: build.gradle.kts
data/: build.gradle.kts
domain/: build.gradle.kts
gradle/: hikari.versions.toml
gradle/build-logic/: build.gradle.kts  gradle.properties  settings.gradle.kts
gradle/build-logic/src/main/kotlin/: PluginAndroidApplication.kt  PluginAndroidLibrary.kt  PluginAndroidTest.kt  PluginComposeAndroid.kt
i18n/: build.gradle.kts
i18n/src/commonMain/moko-resources/ar/: plurals.xml  strings.xml
i18n/src/commonMain/moko-resources/as/: plurals.xml  strings.xml
i18n/src/commonMain/moko-resources/base/: plurals.xml  strings.xml
i18n/src/commonMain/moko-resources/be/: plurals.xml  strings.xml
i18n/src/commonMain/moko-resources/bg/: plurals.xml  strings.xml
i18n/src/commonMain/moko-resources/bn/: plurals.xml  strings.xml
i18n/src/commonMain/moko-resources/ca/: plurals.xml  strings.xml
i18n/src/commonMain/moko-resources/ceb/: strings.xml
i18n/src/commonMain/moko-resources/cs/: plurals.xml  strings.xml
i18n/src/commonMain/moko-resources/cv/: strings.xml
i18n/src/commonMain/moko-resources/da/: strings.xml
i18n/src/commonMain/moko-resources/de/: plurals.xml  strings.xml
i18n/src/commonMain/moko-resources/el/: plurals.xml  strings.xml
i18n/src/commonMain/moko-resources/eo/: plurals.xml  strings.xml
i18n/src/commonMain/moko-resources/es/: plurals.xml  strings.xml
i18n/src/commonMain/moko-resources/eu/: strings.xml
i18n/src/commonMain/moko-resources/fa/: strings.xml
i18n/src/commonMain/moko-resources/fi/: plurals.xml  strings.xml
i18n/src/commonMain/moko-resources/fil/: plurals.xml  strings.xml
i18n/src/commonMain/moko-resources/fr/: plurals.xml  strings.xml
i18n/src/commonMain/moko-resources/gl/: plurals.xml  strings.xml
i18n/src/commonMain/moko-resources/he/: strings.xml
i18n/src/commonMain/moko-resources/hi/: plurals.xml  strings.xml
i18n/src/commonMain/moko-resources/hr/: plurals.xml  strings.xml
i18n/src/commonMain/moko-resources/hu/: plurals.xml  strings.xml
i18n/src/commonMain/moko-resources/in/: plurals.xml  strings.xml
i18n/src/commonMain/moko-resources/it/: plurals.xml  strings.xml
i18n/src/commonMain/moko-resources/ja/: plurals.xml  strings.xml
i18n/src/commonMain/moko-resources/jv/: plurals.xml  strings.xml
i18n/src/commonMain/moko-resources/ka-rGE/: plurals.xml  strings.xml
i18n/src/commonMain/moko-resources/kk/: strings.xml
i18n/src/commonMain/moko-resources/km/: strings.xml
i18n/src/commonMain/moko-resources/ko/: plurals.xml  strings.xml
i18n/src/commonMain/moko-resources/lt/: strings.xml
i18n/src/commonMain/moko-resources/lv/: strings.xml
i18n/src/commonMain/moko-resources/ml/: plurals.xml  strings.xml
i18n/src/commonMain/moko-resources/ms/: plurals.xml  strings.xml
i18n/src/commonMain/moko-resources/my/: strings.xml
i18n/src/commonMain/moko-resources/nb-rNO/: strings.xml
i18n/src/commonMain/moko-resources/ne/: plurals.xml  strings.xml
i18n/src/commonMain/moko-resources/nl/: plurals.xml  strings.xml
i18n/src/commonMain/moko-resources/pl/: plurals.xml  strings.xml
i18n/src/commonMain/moko-resources/pt/: plurals.xml  strings.xml
i18n/src/commonMain/moko-resources/pt-rBR/: plurals.xml  strings.xml
i18n/src/commonMain/moko-resources/ro/: plurals.xml  strings.xml
i18n/src/commonMain/moko-resources/ru/: plurals.xml  strings.xml
i18n/src/commonMain/moko-resources/sa/: plurals.xml  strings.xml
macrobenchmark/: build.gradle.kts
presentation-core/: build.gradle.kts
presentation-widget/: build.gradle.kts
source-api/: build.gradle.kts
source-local/: build.gradle.kts
telemetry/: build.gradle.kts
(+235 files in other folders)
